# chipgame

./: Cargo.toml  chipdx.ini  chipdx.webgl.ini  chipgame.ini  chipgame.md  chipgame.webgl.ini  index.html  license.md  readme.md  save.cc1.json
chipedit/: Cargo.toml  readme.md
chipedit/src/: audio.rs  main.rs
chipgame/: Cargo.toml
chipgame/src/: config.rs  gui.rs  lib.rs  play.rs  save.rs  savedto.rs
chipgame/src/data/: mod.rs  model.rs  music.rs  sprite.rs  spritesheet.rs
chipgame/src/editor/: edit.rs  editstate.rs  history.rs  mod.rs  play.rs  playstate.rs  tiles.rs  tool.rs
chipgame/src/editor/tool/: connection.rs  entity.rs  forcepath.rs  icepath.rs  terrain.rs
chipgame/src/fx/: camera.rs  event.rs  fxstate.rs  handlers.rs  hud.rs  mod.rs  object.rs  objectmap.rs  random.rs  render.rs  resources.rs  sprite.rs  tile.rs
chipgame/src/menu/: about.rs  draw.rs  event.rs  gameover.rs  gamewin.rs  geometry.rs  gotolevel.rs  input.rs  levelselect.rs  levelset.rs  main.rs  menustate.rs  mod.rs  options.rs  packselect.rs  pause.rs  scout.rs  u.rs  unlocklevel.rs  v.rs
chipgame/src/menu/draw/: menu.rs  playtitle.rs  scorecard.rs  trophies.rs
chipgame/src/play/: event.rs  lvsets.rs  mod.rs  playstate.rs  savedata.rs  tiles.rs
chipgame/src/render/: animation.rs  effect.rs  mod.rs  object.rs  objectmap.rs  render.rs  renderstate.rs
chipgame/tests/: CC1.json  replays.rs
chipplay/: Cargo.toml  readme.md
chipplay/src/: gamepad.rs  main.rs
chipplay/src/xinput/: dummy.rs  windows.rs
chipwasm/: Cargo.toml
chipwasm/src/: api.rs  lib.rs
code/chipcore/: Cargo.toml  readme.md
code/chipcore/src/: entities.rs  entitymap.rs  event.rs  gamestate.rs  hidden.rs  lib.rs  movement.rs  quadtree.rs  random.rs  terrain.rs
code/chipcore/src/entities/: blob.rs  block.rs  bomb.rs  bug.rs  glider.rs  iceblock.rs  paramecium.rs  pickup.rs  pinkball.rs  player.rs  playernpc.rs  socket.rs  teeth.rs  walker.rs
code/chipcore/tests/: levels.rs  replays.rs
code/chipcore/tests/levels/: all_keys_and_boots.json  block_push_intro.json  blue_button_order.json  bomb_items.json  cclp3_logo.json  flick3.json  limited_use_button.json  pgchip.json  player_mirror.json  playground.json  skip_blocked_teleport.json  square_peg.json  tips_and_tricks.json  trap_release_semantics.json  twice_step_glitch.json  unfrozen_in_time.json
code/chipcore/tests/replays/WoCC1/: level1.json  level10.json  level102.json  level106.json  level11.json  level111.json  level112.json  level114.json  level117.json  level12.json  level125.json  level13.json  level136.json  level14.json  level148.json  level16.json  level19.json  level20.json  level21.json  level23.json  level25.json  level28.json  level30.json  level31.json  level32.json  level35.json  level37.json  level53.json  level6.json  level7.json  level8.json  level83.json  level86.json  level9.json
code/chipcore/tests/replays/cc1/: level104.json  level108.json  level109.json  level11.json  level110.json  level111.json  level112.json  level113.json  level118.json  level119.json  level122.json  level124.json  level13.json  level130.json  level132.json  level133.json  level135.json  level136.json  level141.json  level142.json  level143.json  level145.json  level146.json  level148.json  level16.json  level17.json  level18.json  level19.json  level2.json  level20.json  level21.json  level24.json  level25.json  level27.json  level28.json  level3.json  level30.json  level32.json  level38.json  level39.json  (+32 more)
code/chipcore/tests/replays/cclp1/: level10.json  level100.json  level101.json  level105.json  level106.json  level107.json  level109.json  level11.json  level110.json  level111.json  level112.json  level113.json  level114.json  level116.json  level118.json  level119.json  level120.json  level122.json  level124.json  level127.json  level128.json  level133.json  level135.json  level137.json  level138.json  level139.json  level14.json  level140.json  level143.json  level144.json  level148.json  level149.json  level15.json  level17.json  level18.json  level19.json  level2.json  level20.json  level21.json  level22.json  (+51 more)
code/chipcore/tests/replays/cclp2/: level1.json  level10.json  level100.json  level101.json  level102.json  level103.json  level104.json  level105.json  level106.json  level11.json  level110.json  level112.json  level116.json  level119.json  level12.json  level122.json  level123.json  level126.json  level128.json  level129.json  level13.json  level130.json  level131.json  level132.json  level134.json  level136.json  level137.json  level138.json  level140.json  level141.json  level142.json  level145.json  level146.json  level148.json  level16.json  level18.json  level19.json  level2.json  (+43 more)
code/chipjni/: Cargo.toml
code/chipjni/src/: lib.rs
editor/: Cargo.toml  readme.md
editor/src/: editor.rs  main.rs  tool.rs
editor/src/tool/: connection.rs  entity.rs  terrain.rs
game/: Cargo.toml
game/src/: editor.rs  lib.rs  play.rs  save.rs
game/src/core/: codes.rs  compass.rs  entities.rs  entity.rs  entitymap.rs  event.rs  field.rs  gamestate.rs  inbuf.rs  input.rs  mod.rs  physics.rs  playerstate.rs  random.rs  soundfx.rs  terrain.rs
game/src/core/entities/: blob.rs  block.rs  bomb.rs  bug.rs  fireball.rs  glider.rs  paramecium.rs  pickup.rs  pinkball.rs  player.rs  socket.rs  tank.rs  teeth.rs  thief.rs  walker.rs
game/src/editor/: mod.rs  tiles.rs  tool.rs
game/src/editor/tool/: entity.rs  terrain.rs
game/src/fx/: audio.rs  camera.rs  event.rs  fxstate.rs  handlers.rs  hud.rs  menu.rs  mod.rs  model.rs  object.rs  objectmap.rs  render.rs  resources.rs  sfx.rs  sprite.rs  tile.rs  ui.rs  visualstate.rs
game/src/fx/ui/: v.rs
game/src/menu/: event.rs  gameover.rs  gamewin.rs  hud.rs  levelselect.rs  main.rs  mod.rs  options.rs  pause.rs  pausemenu.rs  u.rs
game/src/visual/: event.rs  handlers.rs  mod.rs  render.rs  sfx.rs  tile.rs  visualstate.rs
play/: Cargo.toml  readme.md
play/src/: main.rs  xinput-windows.rs
play/src/xinput/: dummy.rs  mod.rs  windows.rs
scripts/playground/: Cargo.toml
scripts/playground/src/: main.rs
(+2789 files in other folders)
