[workspace]
resolver = "2"
members = [
	"./chipdat",
	"./chipcore",
	"./chipedit",
	"./chipgame",
	"./chipplay",
	"./chipty",
	"./scripts/colorkey",
	"./scripts/copyrecords",
	"./scripts/extract",
	"./scripts/fixer",
	"./scripts/levelquery",
	"./scripts/spritec",
	"./scripts/packset",
	"./scripts/replayfix",
]

[workspace.dependencies]
serde = { version = "1.0", features=["derive"] }
serde_json = "1.0"

ini_core = "0.2"

clap = { version = "4.5", features = ["cargo"] }

cvmath = { version = "0.0.5", features=["serde", "dataview"] }
fmtools = "0.1"

urandom = "0.2"

flate2 = "1.0"
basenc = "0.2"

shade = { git = "https://github.com/CasualX/shade", features = ["gl", "msdfgen", "png", "gif"] }

paks = "0.1.1"

[profile.dev]
opt-level = 1

[profile.release]
lto = true
panic = "abort"
