[workspace]
resolver = "2"
members = [
	"./chipdat",
	"./chipcore",
	"./chipedit",
	"./chipgame",
	"./chipplay",
	"./chipty",
	"./scripts/chipundat",
	"./scripts/colorkey",
	"./scripts/copyrecords",
	"./scripts/fixlevel",
	"./scripts/levelquery",
	"./scripts/makedocs",
	"./scripts/packset",
	"./scripts/playground",
	"./scripts/replayfix",
	"./scripts/spritec",
]

[workspace.dependencies]
serde = { version = "1.0", features=["derive"] }
serde_json = "1.0"

ini_core = "0.2"

clap = { version = "4.5", features = ["cargo"] }
cvar = "0.4"

cvmath = { version = "0.0.6", features=["serde", "dataview"] }
fmtools = "0.1"

urandom = "0.2"
dataview = "1.0"

flate2 = "1.0"
basenc = "0.2"
png = "0.17"

shade = { git = "https://github.com/CasualX/shade", features = ["gl", "msdfgen", "png", "gif"] }

paks = "0.1.1"

[profile.dev]
opt-level = 1

[profile.release]
lto = true
panic = "abort"
