[workspace]
resolver = "2"
members = [
	"./code/chipdat",
	"./code/chipcore",
	"./code/chipedit",
	"./code/chipgame",
	"./code/chipjni",
	"./code/chipplay",
	"./code/chipty",
	"./code/chipwasm",
	"./code/scripts/chipundat",
	"./code/scripts/colorkey",
	"./code/scripts/copyrecords",
	"./code/scripts/fixcclp3",
	"./code/scripts/fixlevel",
	"./code/scripts/levelquery",
	"./code/scripts/makedocs",
	"./code/scripts/packset",
	"./code/scripts/playground",
	"./code/scripts/replayfix",
	"./code/scripts/spritec",
]

[workspace.dependencies]
serde = { version = "1.0", features=["derive"] }
serde_json = "1.0"

ini_core = "0.2"

clap = { version = "4.5", features = ["cargo"] }
cvar = "0.4"

cvmath = { version = "0.0.8", features=["serde", "dataview"] }
fmtools = "0.1"

urandom = "0.2"
dataview = "1.0"

flate2 = "1.0"
basenc = "0.2"
png = "0.17"

shade = { git = "https://github.com/CasualX/shade", features = ["gl", "webgl", "msdfgen", "png", "gif"] }

paks = "0.1.2"

[profile.dev]
opt-level = 1

[profile.release]
lto = true
panic = "abort"
