[package]
name = "chipedit"
version = "0.1.0"
edition = "2021"

[dependencies]
chipcore = { path = "../chipcore" }
chipgame = { path = "../chipgame" }
chipty = { path = "../chipty" }

serde.workspace = true
serde_json.workspace = true
ini_core.workspace = true
paks.workspace = true

clap.workspace = true

urandom.workspace = true
cvmath.workspace = true
shade.workspace = true

glutin = "0.32"
glutin-winit = "0.5"
winit = "0.30"
raw-window-handle = "0.6"
gilrs = { version = "0.11", default-features = false, features = ["xinput"] }

soloud = "1.1"

rfd = { version = "0.16", default-features = false, features = ["gtk3"] }
