[package]
name = "chipgame"
version = "0.1.0"
edition = "2021"

[dependencies]
chipcore = { path = "../chipcore" }
dataview = "1.0"
urandom.workspace = true
cvmath.workspace = true
shade.workspace = true
serde.workspace = true
serde_json.workspace = true
flate2.workspace = true
basenc.workspace = true
fmtools.workspace = true
