[package]
name = "chipgame"
version = "0.1.0"
edition = "2021"

[features]
custom_save_data = []

[dependencies]
chipdat = { path = "../chipdat" }
chipcore = { path = "../chipcore" }
chipty = { path = "../chipty" }
dataview.workspace = true
cvar.workspace = true
ini_core.workspace = true
urandom.workspace = true
cvmath.workspace = true
shade.workspace = true
serde.workspace = true
serde_json.workspace = true
flate2.workspace = true
basenc.workspace = true
fmtools.workspace = true
paks.workspace = true
