[package]
name = "chipplay"
version = "0.1.0"
edition = "2021"

[dependencies]
chipgame = { path = "../chipgame" }

serde.workspace = true
serde_json.workspace = true

clap.workspace = true

shade = { git = "https://github.com/CasualX/shade", features = ["msdfgen"] }
glutin = "0.26"
winit = "0.24"

soloud = "1.0"

[target.'cfg(windows)'.dependencies]
rusty-xinput = "1.3"
