[package]
name = "chipplay"
version = "0.1.0"
edition = "2021"

[dependencies]
chipcore = { path = "../chipcore" }
chipgame = { path = "../chipgame" }
chipty = { path = "../chipty" }

ini_core.workspace = true

serde.workspace = true
serde_json.workspace = true

clap.workspace = true

shade.workspace = true
glutin = "0.26"
winit = "0.24"

soloud = "1.0"

paks.workspace = true

[target.'cfg(windows)'.dependencies]
rusty-xinput = "1.3"
