[package]
name = "chipplay"
version = "0.1.0"
edition = "2021"

[dependencies]
chipcore = { path = "../chipcore" }
chipgame = { path = "../chipgame" }
chipty = { path = "../chipty" }

serde.workspace = true
serde_json.workspace = true
ini_core.workspace = true
paks.workspace = true

clap.workspace = true

shade.workspace = true

glutin = "0.31"
glutin-winit = "0.4"
winit = "0.29"
raw-window-handle = "0.5"
gilrs = "0.11"

soloud = "1.0"

[target.'cfg(windows)'.dependencies]
rusty-xinput = "1.3"
