[package]
name = "chipwasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
chipcore = { path = "../chipcore" }
chipgame = { path = "../chipgame" }
chipty = { path = "../chipty" }

shade.workspace = true
cvmath.workspace = true
serde_json.workspace = true
paks.workspace = true

getrandom_02 = { package = "getrandom", version = "0.2.17", features = ["custom"] }
getrandom_03 = { package = "getrandom", version = "0.3.4" }
