[package]
name = "edit"
version = "0.1.0"
edition = "2021"

[dependencies]
chipgame = { path = "../game" }

serde = { version = "1.0", features=["derive"] }
serde_json = "1.0"

clap = { version = "3.2", features = ["cargo"] }

urandom = "0.1"
cvmath = { git = "https://github.com/CasualX/cvmath", features=["serde", "dataview"] }
shade = { git = "https://github.com/CasualX/shade" }

glutin = "0.26"
winit = "0.24"
