[package]
name = "edit"
version = "0.1.0"
edition = "2021"

[dependencies]
chipgame = { path = "../chipgame" }

serde.workspace = true
serde_json.workspace = true

clap.workspace = true

urandom = "0.1"
cvmath.workspace = true
shade = { git = "https://github.com/CasualX/shade" }

glutin = "0.26"
winit = "0.24"
