[package]
name = "play"
version = "0.1.0"
edition = "2021"

[dependencies]
chipgame = { path = "../game" }

serde = { version = "1.0", features=["derive"] }
serde_json = "1.0"

clap = { version = "3.2", features = ["cargo"] }

shade = { git = "https://github.com/CasualX/shade", features = ["msdfgen"] }
glutin = "0.26"
winit = "0.24"

soloud = "1.0"
