[package]
name = "play"
version = "0.1.0"
edition = "2021"

[dependencies]
chipgame = { path = "../game" }

serde.workspace = true
serde_json.workspace = true

clap.workspace = true

shade = { git = "https://github.com/CasualX/shade", features = ["msdfgen"] }
glutin = "0.26"
winit = "0.24"

soloud = "1.0"
