[package]
name = "chipcore"
version = "0.1.0"
edition = "2021"

[dependencies]
chipty = { path = "../chipty" }
urandom.workspace = true
cvmath.workspace = true
cvar.workspace = true
flate2.workspace = true
basenc.workspace = true

[dev-dependencies]
serde.workspace = true
serde_json.workspace = true
